solc_ossfuzz_seed_corpus/test_sol/test_b08c68aad25901067e8495491f79ce6d92789b433b76b59179fec4a38a271f40_c068cd794349b8b9f78cf4105c718b3163484ed1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(address i0,bytes29 i1) 
{ }
contract C0 {
  function f1(address i0,int8 i1) external returns(int144 o0)
  {

{



}

{
  o0 |= (4104606227952367980211229221024481085417015 ^ (((8187886364367620084509705719267948302095665 / 6950000743651941555490769311361093382145991) % (7217995756100932556532511469052064029457787 ^ 5912519961561019394284276508111230469535262)) % -11074341102645312216422869000181972074377340));
  {


  }


}
{
}

  }
}
// ----
// TypeError 2271: (su0.sol:156-439): Operator ^ not compatible with types int_const 4104...(35 digits omitted)...7015 and rational_const 8187...(35 digits omitted)...5665 / 6950...(35 digits omitted)...5991
